# blog

./: .gitignore  PandocFilterGraphviz.hs  README.md  about.markdown  contact.markdown  index.html  my-site.cabal  package-lock.json  package.json  site.hs  stack.yaml  taxPolicy.rtf
css/: custom.css  default.css  tufte.css
drafts/: fp-specialization.org  new-to-r.markdown  rendering-math.markdown  replacing-guilt-diagrams.markdown  tax-policy.markdown  tooNumerousToRegulate.markdown  winterSundays.txt
posts/: 2019-11-25-blogplan.markdown  2019-11-27-stadium-birds.markdown  2019-12-02-continuous-integration.markdown  2019-12-04-academic-publishing.markdown  2019-12-10-academic-publishing.markdown  2019-12-11-trees.markdown  2019-12-13-pandoc-filters.markdown  2019-12-19-developmental-milestones.markdown  2019-12-19-trees.markdown  2020-income-tax-brackets.markdown  academic-publishing.markdown  activationEnergy.markdown  bipartisan.markdown  continuous-integration.markdown  developmental-milestones.markdown  gamesLibraryDatabase.markdown  haidtMnemonics.markdown  introducingFriends.markdown  opportunityAssessment.markdown  pancakeParty.markdown  pandoc-filters.markdown  rendering-math.markdown  replacingGuiltDiagrams.markdown  sleepMnemonic.markdown  ssh-tip.markdown  stadium-birds.markdown  tax-policy.markdown  terminalColors.markdown  tooNumerousToRegulate.markdown  trees.markdown
src/: basicTax.r  basicTaxDerivative.r  brackets2020.r  bracketsDerivative2020.r  compare1954and2020.hs  corecursion.hs  effectiveRate2020.hs  effectiveRate2020.r  graphTaxRates.hs  p.html  (+3 more)
(+3 files in other folders)
