name:               my-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  other-modules:
    PandocFilterGraphviz
  build-depends:    base == 4.*
                  , base16-bytestring
                  , byteable
                  , bytestring
                  , containers
                  , cryptohash
                  , directory
                  , filepath
                  , hakyll == 4.13.*
                  , pandoc
                  , pandoc-types
                  , process
                  , text
                  , split
  ghc-options:      -threaded
  default-language: Haskell2010
